--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sanzo-combo",
-    "version": "1.0.1",
+    "version": "1.0.3pnpm",
     "description": "CLI for Sanzo Wada's A dictionary of color combinations",
     "homepage": "https://github.com/aliiscript/sanzo-combo",
     "repository": {
@@ -33,11 +33,11 @@
     ],
     "devDependencies": {
         "@sindresorhus/tsconfig": "^3.0.1",
-        "@types/node": "^20.0.0",
+        "@types/node": "^20.1.5",
         "@types/react": "^18.2.6",
         "@types/yargs": "^17.0.24",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^4.9.3"
+        "typescript": "^4.9.5"
     },
     "dependencies": {
         "chalk": "4.1.2",
